add addValue option

--- a/lang/ko.json
+++ b/lang/ko.json
@@ -65,6 +65,7 @@
     "Juink.AddLife": "명운 추가",
     "Juink.AddHope": "희망 추가",
     "Juink.AddDice": "주사위 추가",
+    "Juink.AddValue": "수정치 추가",
     "Juink.ChangeDice": "A눈을 B로 변경",
     "Juink.reRollDice": "주사위 눈을 재굴림",
     "Juink.RunMacro": "매크로 실행",
